--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -109,12 +109,77 @@ nav a:hover {
   gap: 0.2em;
 }
 
+.container {
+  padding-inline: 8rem;
+}
+
 .bug-filter {
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  align-items: flex-start;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 auto;
 }
 
-.container {
-  padding-inline: 8rem;
+fieldset {
+  border: 2px solid #4CAF50;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+legend {
+  font-weight: bold;
+  color: #4CAF50;
+  font-size: 1.2rem;
+}
+
+.bug-filter input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.bug-filter input[type="range"] {
+  width: 100%;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+
+.bug-filter label {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #555;
+}
+
+.bug-filter input[type="range"]+label {
+  display: block;
+  font-weight: normal;
+  color: #4CAF50;
+  font-size: 1rem;
+  text-align: center;
+}
+
+.bug-filter input[type="submit"] {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.bug-filter input[type="submit"]:hover {
+  background-color: #45a049;
 }
